fixed byte/word handling of modbus requests/responses